--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="top-header">
       <ul class="register-menu list">
         <li>
-          <a href="123-123456789" class="top-link">123-123456789</a>
+          <a href="123-123456789" class="top-link phone">123-123456789</a>
         </li>
         <li>
-          <a href="info@ltntcom" class="top-link">info@ltntcom</a>
+          <a href="info@ltntcom" class="top-link letter">info@ltntcom</a>
         </li>
         </ul>
         <ul class="nav-bar list">
@@ -70,9 +70,29 @@
         <h2 class="baner">dresses <b>&</b> jeans <p class="row-2">fspaourfamous brands <b>sale</b></p></h2>
         <a href="" class="buy-link">buy now</a>
       </div>
+      <div class="toolblock">
+        <ul class="list options">
+          <li class="tool">
+            <h3 class="tool-name settings">setting</h3>
+            <p class="tool-about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quo quibusdam aliquam quaerat et? Cupiditate deserunt, laudantium repellendus sunt, molestias dolor necessitatibus beatae nisi fugiat sit reiciendis explicabo dolore non eius totam distinctio mollitia aliquid laborum. Quasi similique, voluptates quaerat possimus, animi eaque odio reprehenderit non, suscipit eius recusandae eum?</p>
+          </li>
+          <li class="tool">
+            <h3 class="tool-name safe">money back</h3>
+            <p class="tool-about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, quia. Tenetur expedita beatae molestiae? Mollitia odio ullam adipisci ipsa doloribus delectus ea voluptatibus nobis cupiditate corrupti. Debitis tempora facilis cum est repudiandae, odio necessitatibus. Deleniti nulla blanditiis nihil labore exercitationem praesentium. Earum error provident ratione ullam voluptatum quam expedita voluptatem!</p>
+          </li>
+          <li class="tool">
+            <h3 class="tool-name net">worldwide shipping</h3>
+            <p class="tool-about">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum, iure dicta consequatur illum quaerat exercitationem aperiam, inventore possimus vitae repellat at! Consectetur illum eum, molestiae accusamus incidunt voluptatibus aperiam, consequatur ratione, non iste veritatis. Blanditiis laudantium possimus, placeat adipisci nam quam impedit, fuga voluptatum eaque rem enim ipsa</p>     
+          </li>
+          <li class="tool">
+            <h3 class="tool-name compass">worldwide shipping</h3>
+            <p class="tool-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore quasi excepturi voluptates numquam, nisi consectetur possimus saepe a, dolorem ratione corporis expedita sit tempora tempore libero necessitatibus debitis temporibus nesciunt nemo odit quia. Non nam cumque odit. Dolorem quidem fugit tenetur quasi, voluptatibus ab placeat obcaecati doloribus odit neque.</p c>
+          </li>
+        </ul>
+      </div>
       <section class="colored">
         <div class="container">
-          <h2 class="title">new collection</h2>
+          <h2 class="title color-line">new collection</h2>
           <ul class="list positions">
             <li class="item">
               <a class="link-2" href="">
@@ -117,7 +137,7 @@
       </section>
       <section>
         <div class="container">
-          <h2 class="title">feature products</h2>
+          <h2 class="title color-line">feature products</h2>
         <ul class="list positions">
           <li class="item">
            <a class="link-2" href="">
@@ -194,7 +214,7 @@
         </div>
       </section>
       <section class="colored">
-        <h2 class="title">latest news</h2>
+        <h2 class="title color-line">latest news</h2>
         <div class="container">
         <ul class="list positions">
           <li class="blog">
@@ -225,12 +245,14 @@
         </div>
       </section>
       <section class="section-with-input">
-        <h2 class="title">newsletter</h2>
+        <h2 class="title white-line">newsletter</h2>
         <form class="registration-field">
-        <p class="subscription">follow a colection of news & promotions</p>
+        <p class="subscription">Follow a colection of news & promotions</p>
+       <div class="input-row">
         <input type="text" placeholder="Enter your email here" name="mail" class="mail">
         <button type="submit" class="button"></button>
-      </form>
+       </div>
+        </form>
       </section>
     </main>
   </body>
