--- a/index.html
+++ b/index.html
@@ -67,26 +67,26 @@
     </header>
     <main>
       <div class="box">
-        <h2 class="baner">dresses <b>&</b> jeans <p class="row-2">fspaourfamous brands <b>sale</b></p></h2>
+        <h2 class="baner">dresses <b>&amp;</b> jeans <p class="row-2">fspaourfamous brands <b>sale</b></p></h2>
         <a href="" class="buy-link">buy now</a>
       </div>
       <div class="toolblock">
         <ul class="list options">
-          <li class="tool">
-            <h3 class="tool-name settings">setting</h3>
+          <li class="tool settings">
+            <h3 class="tool-name">setting</h3>
             <p class="tool-about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet quo quibusdam aliquam quaerat et? Cupiditate deserunt, laudantium repellendus sunt, molestias dolor necessitatibus beatae nisi fugiat sit reiciendis explicabo dolore non eius totam distinctio mollitia aliquid laborum. Quasi similique, voluptates quaerat possimus, animi eaque odio reprehenderit non, suscipit eius recusandae eum?</p>
           </li>
-          <li class="tool">
-            <h3 class="tool-name safe">money back</h3>
+          <li class="tool safe">
+            <h3 class="tool-name">money back</h3>
             <p class="tool-about">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis, quia. Tenetur expedita beatae molestiae? Mollitia odio ullam adipisci ipsa doloribus delectus ea voluptatibus nobis cupiditate corrupti. Debitis tempora facilis cum est repudiandae, odio necessitatibus. Deleniti nulla blanditiis nihil labore exercitationem praesentium. Earum error provident ratione ullam voluptatum quam expedita voluptatem!</p>
           </li>
-          <li class="tool">
-            <h3 class="tool-name net">worldwide shipping</h3>
+          <li class="tool net">
+            <h3 class="tool-name">worldwide shipping</h3>
             <p class="tool-about">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsum, iure dicta consequatur illum quaerat exercitationem aperiam, inventore possimus vitae repellat at! Consectetur illum eum, molestiae accusamus incidunt voluptatibus aperiam, consequatur ratione, non iste veritatis. Blanditiis laudantium possimus, placeat adipisci nam quam impedit, fuga voluptatum eaque rem enim ipsa</p>     
           </li>
-          <li class="tool">
-            <h3 class="tool-name compass">worldwide shipping</h3>
-            <p class="tool-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore quasi excepturi voluptates numquam, nisi consectetur possimus saepe a, dolorem ratione corporis expedita sit tempora tempore libero necessitatibus debitis temporibus nesciunt nemo odit quia. Non nam cumque odit. Dolorem quidem fugit tenetur quasi, voluptatibus ab placeat obcaecati doloribus odit neque.</p c>
+          <li class="tool compass">
+            <h3 class="tool-name">worldwide shipping</h3>
+            <p class="tool-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore quasi excepturi voluptates numquam, nisi consectetur possimus saepe a, dolorem ratione corporis expedita sit tempora tempore libero necessitatibus debitis temporibus nesciunt nemo odit quia. Non nam cumque odit. Dolorem quidem fugit tenetur quasi, voluptatibus ab placeat obcaecati doloribus odit neque.</p>
           </li>
         </ul>
       </div>
@@ -98,6 +98,12 @@
               <a class="link-2" href="">
                 <div class="overlay">
                   <img src="./images/new-1.png" alt="" width="255" height="270">
+                  <div class="actions">
+                    <button type="button" class="like"></button>
+                    <button type="button" class="share"></button>
+                    <button type="button" class="clock"></button>
+                    <button type="button" class="basket">add to cart</button>
+                  </div>
                 </div>
              <div class="content">
               <h3 class="name">blue tshirt</h3>
@@ -107,7 +113,16 @@
             </li>
             <li class="item">
               <a class="link-2" href="">
+                <div class="overlay">
               <img src="./images/new-2.png" alt="" width="255" height="270">
+              <div class="actions">
+                <button type="button" class="like"></button>
+                <button type="button" class="share"></button>
+                <button type="button" class="clock"></button>
+                <button type="button" class="basket">add to cart</button>
+              </div>
+
+                </div>
              <div class="content">
               <h3 class="name">woman shirt</h3>
               <p class="price">$31</p>
@@ -116,8 +131,16 @@
             </li>
             <li class="item">
               <a class="link-2" href="">
-              <img src="./images/new-3.png" alt="" width="255" height="270">
-             <div class="content">
+              <div class="overlay">
+                <img src="./images/new-3.png" alt="" width="255" height="270">
+                <div class="actions">
+                  <button type="button" class="like"></button>
+                  <button type="button" class="share"></button>
+                  <button type="button" class="clock"></button>
+                  <button type="button" class="basket">add to cart</button>
+                </div>
+              </div>
+               <div class="content">
               <h3 class="name">yellow tshirt</h3>
               <p class="price">$21</p>
              </div>
@@ -125,7 +148,15 @@
             </li>
             <li class="item">
               <a class="link-2" href="">
-              <img src="./images/new-4.png" alt="" width="255" height="270">
+              <div class="overlay">
+                <img src="./images/new-4.png" alt="" width="255" height="270">
+                <div class="actions">
+                  <button type="button" class="like"></button>
+                  <button type="button" class="share"></button>
+                  <button type="button" class="clock"></button>
+                  <button type="button" class="basket">add to cart</button>
+                </div>
+              </div>
              <div class="content">
               <h3 class="name">cool lingerie</h3>
               <p class="price">$56</p>
@@ -141,7 +172,15 @@
         <ul class="list positions">
           <li class="item">
            <a class="link-2" href="">
-            <img src="./images/product1.png" alt="women's sandals" width="255" height="282" class="colored">
+           <div class="overlay">
+              <img src="./images/product1.png" alt="women's sandals" width="255" height="282" class="colored">
+              <div class="actions">
+                <button type="button" class="like"></button>
+                <button type="button" class="share"></button>
+                <button type="button" class="clock"></button>
+                <button type="button" class="basket">add to cart</button>
+              </div>
+           </div>
            <div class="content">
             <h3 class="name">blue tshirt</h3>
             <p class="price">$26</p>
@@ -150,7 +189,15 @@
           </li>
           <li class="item">
             <a class="link-2" href="">
+              <div class="overlay">
             <img src="./images/product2.png" alt="belt" width="255" height="282" class="colored">
+            <div class="actions">
+              <button type="button" class="like"></button>
+              <button type="button" class="share"></button>
+              <button type="button" class="clock"></button>
+              <button type="button" class="basket">add to cart</button>
+            </div>
+              </div>
             <div class="content">
             <h3 class="name">woman shirt</h3>
             <p class="price">$31</p>
@@ -159,7 +206,15 @@
           </li>
           <li class="item">
             <a class="link-2" href=""></a>
+            <div class="overlay">
             <img src="./images/product3.png" alt="plaid hat" width="255" height="282" class="colored">
+            <div class="actions">
+              <button type="button" class="like"></button>
+              <button type="button" class="share"></button>
+              <button type="button" class="clock"></button>
+              <button type="button" class="basket">add to cart</button>
+            </div>
+            </div>
             <div class="content">
               <h3 class="name">yellow tshirt</h3>
               <p class="price">$21</p>
@@ -167,7 +222,15 @@
             </li>
           <li class="item">
             <a class="link-2" href="">
-              <img src="./images/product4.png" alt="ladies purse" width="255" height="282" class="colored">
+              <div class="overlay">
+                 <img src="./images/product4.png" alt="ladies purse" width="255" height="282" class="colored">
+                 <div class="actions">
+                  <button type="button" class="like"></button>
+                  <button type="button" class="share"></button>
+                  <button type="button" class="clock"></button>
+                  <button type="button" class="basket">add to cart</button>
+                </div>
+              </div>
                 <div class="content">
                   <h3 class="name">cool lingerie</h3>
                   <p class="price">$56</p>
@@ -176,7 +239,15 @@
           </li>
           <li class="item">
             <a class="link-2" href="">
+              <div class="overlay">
             <img src="./images/product5.png" alt="handbag" width="255" height="282" class="colored">
+            <div class="actions">
+              <button type="button" class="like"></button>
+              <button type="button" class="share"></button>
+              <button type="button" class="clock"></button>
+              <button type="button" class="basket">add to cart</button>
+            </div>
+              </div>
             <div class="content">
               <h3 class="name">blue tshirt</h3>
               <p class="price">$26</p>
@@ -185,7 +256,15 @@
           </li>
           <li class="item">
             <a class="link-2" href="">
+              <div class="overlay">
             <img src="./images/product6.png" alt="leather belt" width="255" height="282" class="colored">
+            <div class="actions">
+              <button type="button" class="like"></button>
+              <button type="button" class="share"></button>
+              <button type="button" class="clock"></button>
+              <button type="button" class="basket">add to cart</button>
+            </div>
+              </div>
             <div class="content">
               <h3 class="name">woman shirt</h3>
               <p class="price">$31</p>
@@ -194,7 +273,15 @@
           </li>
           <li class="item">
             <a class="link-2" href="">
+              <div class="overlay">
             <img src="./images/product7.png" alt="sunglasses" width="255" height="282" class="colored">
+            <div class="actions">
+              <button type="button" class="like"></button>
+              <button type="button" class="share"></button>
+              <button type="button" class="clock"></button>
+              <button type="button" class="basket">add to cart</button>
+            </div>
+              </div>
             <div class="content">
               <h3 class="name">yellow tshirt</h3>
               <p class="price">$21</p>
@@ -203,7 +290,15 @@
           </li>
           <li class="item">
             <a class="link-2" href="">
+              <div class="overlay">
             <img src="./images/product8.png" alt="shoes" width="255" height="282" class="colored">
+            <div class="actions">
+              <button type="button" class="like"></button>
+              <button type="button" class="share"></button>
+              <button type="button" class="clock"></button>
+              <button type="button" class="basket">add to cart</button>
+            </div>
+              </div>
             <div class="content">
               <h3 class="name">cool lingerie</h3>
               <p class="price">$56</p>
@@ -250,7 +345,7 @@
         <p class="subscription">Follow a colection of news & promotions</p>
        <div class="input-row">
         <input type="text" placeholder="Enter your email here" name="mail" class="mail">
-        <button type="submit" class="button"></button>
+        <button type="submit" class="submition"></button>
        </div>
         </form>
       </section>
