--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <div class="top-header">
+    <div class="top-header container">
       <ul class="register-menu list">
         <li>
           <a href="123-123456789" class="top-link phone">123-123456789</a>
@@ -70,7 +70,8 @@
         <h2 class="baner">dresses <b>&amp;</b> jeans <p class="row-2">fspaourfamous brands <b>sale</b></p></h2>
         <a href="" class="buy-link">buy now</a>
       </div>
-      <div class="toolblock">
+      <section class="toolblock">
+        <div class="container">
         <ul class="list options">
           <li class="tool settings">
             <h3 class="tool-name">setting</h3>
@@ -89,7 +90,8 @@
             <p class="tool-about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium dolore quasi excepturi voluptates numquam, nisi consectetur possimus saepe a, dolorem ratione corporis expedita sit tempora tempore libero necessitatibus debitis temporibus nesciunt nemo odit quia. Non nam cumque odit. Dolorem quidem fugit tenetur quasi, voluptatibus ab placeat obcaecati doloribus odit neque.</p>
           </li>
         </ul>
-      </div>
+        </div>
+      </section>
       <section class="colored">
         <div class="container">
           <h2 class="title color-line">new collection</h2>
