--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body>
-    <div class="top-header container">
+    <div class="top-header">
+      <div class="container-menu">
       <ul class="register-menu list">
         <li>
           <a href="123-123456789" class="top-link phone">123-123456789</a>
@@ -35,6 +36,7 @@
             <a href="" class="top-link">Login/Register</a>
           </li>
         </ul>
+      </div>
       </div>
   <header class="page-header">
       <div class="container"> 
@@ -104,7 +106,7 @@
                     <button type="button" class="like"></button>
                     <button type="button" class="share"></button>
                     <button type="button" class="clock"></button>
-                    <button type="button" class="basket">add to cart</button>
+                    <button type="button" class="basket"></button>
                   </div>
                 </div>
              <div class="content">
