--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <button type="button" class="like"></button>
                 <button type="button" class="share"></button>
                 <button type="button" class="clock"></button>
-                <button type="button" class="basket">add to cart</button>
+                <button type="button" class="basket"></button>
               </div>
 
                 </div>
@@ -141,7 +141,7 @@
                   <button type="button" class="like"></button>
                   <button type="button" class="share"></button>
                   <button type="button" class="clock"></button>
-                  <button type="button" class="basket">add to cart</button>
+                  <button type="button" class="basket"></button>
                 </div>
               </div>
                <div class="content">
@@ -158,7 +158,7 @@
                   <button type="button" class="like"></button>
                   <button type="button" class="share"></button>
                   <button type="button" class="clock"></button>
-                  <button type="button" class="basket">add to cart</button>
+                  <button type="button" class="basket"></button>
                 </div>
               </div>
              <div class="content">
@@ -182,7 +182,7 @@
                 <button type="button" class="like"></button>
                 <button type="button" class="share"></button>
                 <button type="button" class="clock"></button>
-                <button type="button" class="basket">add to cart</button>
+                <button type="button" class="basket"></button>
               </div>
            </div>
            <div class="content">
@@ -199,7 +199,7 @@
               <button type="button" class="like"></button>
               <button type="button" class="share"></button>
               <button type="button" class="clock"></button>
-              <button type="button" class="basket">add to cart</button>
+              <button type="button" class="basket"></button>
             </div>
               </div>
             <div class="content">
@@ -216,7 +216,7 @@
               <button type="button" class="like"></button>
               <button type="button" class="share"></button>
               <button type="button" class="clock"></button>
-              <button type="button" class="basket">add to cart</button>
+              <button type="button" class="basket"></button>
             </div>
             </div>
             <div class="content">
@@ -232,7 +232,7 @@
                   <button type="button" class="like"></button>
                   <button type="button" class="share"></button>
                   <button type="button" class="clock"></button>
-                  <button type="button" class="basket">add to cart</button>
+                  <button type="button" class="basket"></button>
                 </div>
               </div>
                 <div class="content">
@@ -249,7 +249,7 @@
               <button type="button" class="like"></button>
               <button type="button" class="share"></button>
               <button type="button" class="clock"></button>
-              <button type="button" class="basket">add to cart</button>
+              <button type="button" class="basket"></button>
             </div>
               </div>
             <div class="content">
@@ -266,7 +266,7 @@
               <button type="button" class="like"></button>
               <button type="button" class="share"></button>
               <button type="button" class="clock"></button>
-              <button type="button" class="basket">add to cart</button>
+              <button type="button" class="basket"></button>
             </div>
               </div>
             <div class="content">
@@ -283,7 +283,7 @@
               <button type="button" class="like"></button>
               <button type="button" class="share"></button>
               <button type="button" class="clock"></button>
-              <button type="button" class="basket">add to cart</button>
+              <button type="button" class="basket"></button>
             </div>
               </div>
             <div class="content">
@@ -300,7 +300,7 @@
               <button type="button" class="like"></button>
               <button type="button" class="share"></button>
               <button type="button" class="clock"></button>
-              <button type="button" class="basket">add to cart</button>
+              <button type="button" class="basket"></button>
             </div>
               </div>
             <div class="content">
